# Face_Auth_NextGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_TR.md  faceauth.conf  faceauth.service  setup.sh
docs/: hafiza.md
docs/plans/: 2026-05-23_liveness_index_fix.md
docs/walkthroughs/: 2026-05-19_sddm_fixing.md  2026-05-23_liveness_index_fix.md  2026-05-24_liveness_alternative_config.md
src/: cli_benchmark.cpp  config.hpp  daemon.cpp  live_test.cpp  pam_faceauth.c  test_model.cpp
